model structure: member destructure & member function changed
