# routes/MemberRoute.js
@@ -3,10 +3,10 @@ const router = express.Router();
 
 const MemberController = require("../controllers/MemberController");
 
-router.get("/:semesterId", MemberController.getSemesterMemberList);
-router.post("/:semesterId", MemberController.createSemesterMember);
-// router.get("/:semesterId/:memberId", MemberController.getSemesterMember);
-// router.put("/:semesterId/:memberId", MemberController.updateSemesterMember);
-// router.delete("/:semesterId/:memberId", MemberController.deleteSemesterMember);
+router.get("/", MemberController.getMemberList);
+router.post("/", MemberController.createMember);
+// router.get("/:memberId", MemberController.getMember);
+// router.put("/:memberId", MemberController.updateMember);
+// router.delete("/:memberId", MemberController.deleteMember);
 
 module.exports = router;
